# poke-guesser

./: .gitignore  Cargo.toml  README.md  index.html  styles.css  todo.txt
.github/workflows/: main.yml
src/: lib.rs  main.rs  util.rs
src/components/: button.rs  button_input.rs  guesser.rs  mod.rs  pokemon_image.rs  pokemon_label.rs  repo_link.rs  settings_menu.rs  starburst.rs  text_input.rs  title.rs
src/models/: mod.rs  pokemon.rs  pokemon_list.rs  settings.rs
