[package]
name = "poke-guesser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
getrandom = { version = "0.2.10", features = ["js"] }
gloo = "0.10.0"
itertools = "0.11.0"
rand = "0.8.5"
scraper = "0.18.0"
web-sys = "0.3.64"
structmap = "0.1.6"
structmap-derive = "0.1.6"
wasm-bindgen = "0.2.87"
yew = { version = "0.21.0", features = ["csr"] }
