[package]
name = "poke-guesser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
getrandom = { version = "0.2.15", features = ["js"] }
gloo = "0.11.0"
itertools = "0.13.0"
rand = "0.8.5"
web-sys = { version = "0.3.69", features = ["DomTokenList"] }
structmap = "0.1.6"
structmap-derive = "0.1.6"
wasm-bindgen = "0.2.92"
yew = { version = "0.21.0", features = ["csr"] }
strum = { version = "0.26.2", features = ["derive"] }
